--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "type": "module",
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/ws": "^8.2.2"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.2",
+    "ws": "^8.5.0"
   }
 }
