--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "files.exclude": {
         "**/node_modules/": true,
         "**/package-lock.json": true
+    },
+    "files.associations": {
+        "*.part": "html"
     }
 }
