--- a/Source/WebWorkers/tsconfig.build.json
+++ b/Source/WebWorkers/tsconfig.build.json
@@ -14,7 +14,7 @@
     // "declarationMap": true,                      /* Generates a sourcemap for each corresponding '.d.ts' file. */
     // "sourceMap": true,                           /* Generates corresponding '.map' file. */
     // "outFile": "./",                             /* Concatenate and emit output to single file. */
-    "outDir": "./../../Files",                      /* Redirect output structure to the directory. */
+    "outDir": "./../../Files/WebWorkers",           /* Redirect output structure to the directory. */
     // "rootDir": "./",                             /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                           /* Enable project compilation */
     // "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
@@ -67,12 +67,10 @@
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true,       /* Disallow inconsistently-cased references to the same file. */
     "paths": {
-        "@Server/*": [ "./../Server/*" ],
-        "@WebWorkers/*": [ "./../WebWorkers/*" ]
+        "@Server/*": [ "./../Server/*" ]
     }
   },
   "references": [
-    { "path": "./../Server" },
-    { "path": "./../WebWorkers",  }
+    { "path": "./../Server" }
   ]
 }
