--- a/Source/Buttplug.io/Integration/Integration.csproj
+++ b/Source/Buttplug.io/Integration/Integration.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
 	<StartupObject>Integration.Program</StartupObject>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
