--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "type": "module",
   "devDependencies": {
-    "@types/express": "^4.17.13",
     "@types/bcryptjs": "^2.4.2",
-    "@types/ws": "^8.2.2"
+    "@types/express": "^4.17.13",
+    "@types/ws": "^8.2.2",
+    "esbuild": "^0.14.23"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
